# sbr-software

./: CMakeLists.txt  README.md  prj.conf
boards/: core51_nrf51822.overlay  nicenano_v20_nrf52840.overlay  nrf52dk_nrf52832.overlay
boards/arm/core51/: Kconfig.core51  Kconfig.defconfig  board.cmake  board.yml  core51_nrf51822.dts  core51_nrf51822.yaml  core51_nrf51822_defconfig
boards/arm/nicenano_v20/: Kconfig.defconfig  Kconfig.nicenano_v20  board.cmake  board.yml  nicenano_v20_nrf52840-pinctrl.dtsi  nicenano_v20_nrf52840.dts  nicenano_v20_nrf52840.yaml  nicenano_v20_nrf52840_defconfig
dts/bindings/: pwm-motors.yaml
src/: ble_comm copy.c  ble_comm.c  ble_comm.h  buttons.c  buttons.h  main copy.c  main.c  motors.c  motors.h  mpu6050.c  mpu6050.h  usb_module.c  usb_module.h
